# OpenMemoryProtocol

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
charts/omp/: Chart.yaml  values-dev.yaml  values.yaml
charts/omp/templates/: _helpers.tpl  gateway.yaml  shards.yaml  store.yaml
crates/omp-builder/: Cargo.toml
crates/omp-builder/src/: builder.rs  jobs.rs  lib.rs  main.rs  router.rs
crates/omp-builder/tests/: build_pipeline.rs
crates/omp-cli/: Cargo.toml
crates/omp-cli/src/: main.rs
crates/omp-core/: Cargo.toml
crates/omp-core/src/: api.rs  audit.rs  chunks.rs  commit.rs  config.rs  encrypted_manifest.rs  engine.rs  error.rs  gc.rs  hash.rs  hex.rs  keys.rs  lib.rs  manifest.rs  object.rs  paths.rs  query.rs  refs.rs  registry.rs  schema.rs  share.rs  tenant.rs  time.rs  toml_canonical.rs  tree.rs  uploads.rs  walker.rs
crates/omp-core/src/probes/: cbor.rs  host.rs  manifest.rs  mod.rs  starter.rs
crates/omp-core/src/store/: disk.rs  mod.rs
crates/omp-core/starter-probes/: audio.duration_seconds.probe.toml  file.mime.probe.toml  file.sha256.probe.toml  file.size.probe.toml  image.dimensions.probe.toml  pdf.page_count.probe.toml  text.line_count.probe.toml  video.dimensions.probe.toml  video.duration_seconds.probe.toml
crates/omp-core/starter-schemas/jpeg/: schema.toml
crates/omp-core/starter-schemas/markdown/: schema.toml
crates/omp-core/starter-schemas/mp3/: schema.toml
crates/omp-core/starter-schemas/mp4/: schema.toml
crates/omp-core/starter-schemas/pdf/: schema.toml
crates/omp-core/starter-schemas/png/: schema.toml
crates/omp-core/starter-schemas/text/: schema.toml
crates/omp-core/starter-schemas/wav/: schema.toml
crates/omp-core/tests/: chunks.rs  dynamic_probes.rs  encryption.rs  encryption_chunked.rs  end_to_end.rs  render_hint.rs  reprobe.rs  tree_commit_encryption.rs
crates/omp-crypto/: Cargo.toml
crates/omp-crypto/src/: aead.rs  chunk_nonce.rs  error.rs  identity.rs  kdf.rs  lib.rs
crates/omp-events/: Cargo.toml
crates/omp-events/src/: lib.rs
crates/omp-gateway/: Cargo.toml  build.rs
crates/omp-gateway/src/: auth.rs  lib.rs  main.rs  ui.rs
crates/omp-gateway/tests/: proxy_routing.rs
crates/omp-marketplace/: Cargo.toml
crates/omp-marketplace/src/: blobs.rs  catalog.rs  lib.rs  main.rs  schemas.rs
crates/omp-marketplace/tests/: lifecycle.rs
crates/omp-proto/: Cargo.toml  build.rs
crates/omp-proto/src/: lib.rs
crates/omp-server/: Cargo.toml
crates/omp-server/src/: auth.rs  health.rs  lib.rs  main.rs  metrics.rs  routes.rs
crates/omp-server/tests/: encryption_http.rs  events.rs  http_smoke.rs  multi_tenant.rs  observability.rs  query_route.rs  uploads.rs
crates/omp-store/: Cargo.toml
crates/omp-store-client/: Cargo.toml
crates/omp-store-client/src/: lib.rs
crates/omp-store-client/tests/: grpc_round_trip.rs
crates/omp-store/src/: lib.rs  main.rs
crates/omp-tenant-ctx/: Cargo.toml
crates/omp-tenant-ctx/src/: lib.rs
docs/: arch.md  core_arch.md  micro_arch.md
docs/design/: 00-overview.md  01-on-disk-layout.md  02-object-model.md  03-hierarchical-trees.md  04-schemas.md  05-probes.md  06-api-surface.md  07-config.md  08-deployability.md  09-roadmap.md  10-why-no-v2.md  11-multi-tenancy.md  12-large-files.md  13-end-to-end-encryption.md  14-microservice-decomposition.md  15-query-and-discovery.md  16-event-streaming.md  17-deployment-k8s.md  18-observability.md  19-web-frontend.md  20-server-side-probes.md  21-schema-reprobe.md  22-workos-auth.md  23-probe-marketplace.md  24-per-user-api-keys.md  25-schema-marketplace.md  26-default-schemas-and-probes.md  README.md
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  auth.ts  format.ts  queryLang.test.ts  queryLang.ts  sse.ts  types.ts
frontend/src/lib/components/: CodeEditor.svelte  FileRenderer.svelte  FileSidebar.svelte  ProfileMenu.svelte  QueryEditor.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/audit/: +page.svelte
frontend/src/routes/branches/: +page.svelte
frontend/src/routes/commit/: +page.svelte
frontend/src/routes/file/[...path]/: +page.svelte
frontend/src/routes/log/: +page.svelte
frontend/src/routes/marketplace/: +page.svelte
frontend/src/routes/marketplace/[id]/: +page.svelte
frontend/src/routes/marketplace/[id]/edit/: +page.svelte
frontend/src/routes/marketplace/upload/: +page.svelte
frontend/src/routes/query/: +page.svelte
frontend/src/routes/schema-marketplace/: +page.svelte
frontend/src/routes/schema-marketplace/[id]/: +page.svelte
frontend/src/routes/schema-marketplace/upload/: +page.svelte
frontend/src/routes/settings/api-keys/: +page.svelte
frontend/src/routes/upload/: +page.svelte
probes-src/: Cargo.toml
probes-src/audio-duration/: Cargo.toml
probes-src/audio-duration/src/: lib.rs
probes-src/file-mime/: Cargo.toml
probes-src/file-mime/src/: lib.rs
probes-src/file-sha256/: Cargo.toml
probes-src/file-sha256/src/: lib.rs
probes-src/file-size/: Cargo.toml
probes-src/file-size/src/: lib.rs
probes-src/image-dimensions/: Cargo.toml
probes-src/image-dimensions/src/: lib.rs
probes-src/pdf-page-count/: Cargo.toml
probes-src/pdf-page-count/src/: lib.rs
probes-src/probe-common/: Cargo.toml
probes-src/probe-common/src/: lib.rs
probes-src/probe-mp4/: Cargo.toml
probes-src/probe-mp4/src/: lib.rs
probes-src/text-contains-test/: Cargo.toml
probes-src/text-contains-test/src/: lib.rs
probes-src/text-line-count/: Cargo.toml
probes-src/text-line-count/src/: lib.rs
probes-src/video-dimensions/: Cargo.toml
probes-src/video-dimensions/src/: lib.rs
probes-src/video-duration/: Cargo.toml
probes-src/video-duration/src/: lib.rs
proto/: events.proto  store.proto
scripts/: build-probes.sh  demo-microservices.sh  demo-multi-tenant.sh  demo-probe.lib.rs  demo-probe.probe.toml  demo.sh  demo.txt  dev.sh  install-tooling.sh  k8s-smoke.sh  schema.toml
(+2 files in other folders)
