[package]
name = "omp-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "omp_builder"
path = "src/lib.rs"

[[bin]]
name = "omp-builder"
path = "src/main.rs"

[dependencies]
omp-tenant-ctx = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
