[package]
name = "omp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OpenMemoryProtocol core: objects, store, schemas, probes, ingest engine, api."

[lib]
name = "omp_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
omp-crypto = { workspace = true }
zeroize = "1"
fs2 = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
wasmtime = { workspace = true }
infer = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
wat = "1"
sha2 = { workspace = true }
omp-crypto = { workspace = true }
