[package]
name = "omp-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OpenMemoryProtocol crypto primitives: Argon2id KDF, HKDF subkeys, ChaCha20-Poly1305 AEAD, X25519 identity + age-style recipient stanzas. See docs/design/13-end-to-end-encryption.md."

[lib]
name = "omp_crypto"
path = "src/lib.rs"

[dependencies]
sha2 = { workspace = true }
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
subtle = "2"
zeroize = "1"
thiserror = { workspace = true }

[dev-dependencies]
hex = "0.4"
