[package]
name = "omp-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "omp_gateway"
path = "src/lib.rs"

[[bin]]
name = "omp-gateway"
path = "src/main.rs"

[features]
default = ["embed-ui"]
# Compile the SvelteKit `frontend/build/` directory into the gateway binary
# and serve it at `/ui/*`. Disable with `--no-default-features` for
# backend-only builds that don't have Node available. See
# `docs/design/19-web-frontend.md`.
embed-ui = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
omp-tenant-ctx = { workspace = true }
omp-core = { path = "../omp-core" }
anyhow = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
omp-server = { path = "../omp-server" }
omp-core = { path = "../omp-core" }
futures = { workspace = true }
async-stream = { workspace = true }
