[package]
name = "omp-marketplace"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "omp_marketplace"
path = "src/lib.rs"

[[bin]]
name = "omp-marketplace"
path = "src/main.rs"

[dependencies]
omp-tenant-ctx = { workspace = true }
omp-builder = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
fs2 = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
