[package]
name = "omp-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "omp_store"
path = "src/lib.rs"

[[bin]]
name = "omp-store"
path = "src/main.rs"

[dependencies]
omp-core = { path = "../omp-core" }
omp-proto = { workspace = true }
omp-tenant-ctx = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prost = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-stream = { workspace = true }
