[package]
name = "image-dimensions"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "image_dimensions"
crate-type = ["cdylib"]

[dependencies]
probe-common = { path = "../probe-common" }
ciborium = { workspace = true }
imagesize = { version = "0.13", default-features = false }
